[package]
name = "rehashinghashmap"
version = "0.1.2"
authors = ["Sebastian Waisbrot <seppo0010@gmail.com>"]
description = "A HashMap wrapper that shrinks to fit in small steps."
repository = "https://github.com/seppo0010/rehashinghashmap"
readme = "README.md"
keywords = ["hashmap", "rehashing"]
license = "BSD-2-Clause"
